# OpenGL-Study

./: README.md
ImGui/: .gitignore  CMakeLists.txt  README.md  main.cpp
Intro/: 3d_data.cpp  3d_data.hpp  CMakeLists.txt  animation.cpp  animation.hpp  color_data.hpp  draw3D.cpp  hidden_surface_removal.cpp  hierarchical.cpp  main.cpp  shading.cpp
Triangle/: CMakeLists.txt  README.md  color_data.hpp  main.cpp  triangle.cpp  triangle.hpp
