cmake_minimum_required(VERSION 3.0.0)
project(ImGui VERSION 0.1.0)

include(CTest)
enable_testing()

find_package(glfw3 3.3 REQUIRED)
find_package(OpenGL REQUIRED)

add_executable(ImGui main.cpp)

target_link_libraries(ImGui glfw)

set(CPACK_PROJECT_NAME ${PROJECT_NAME})
set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
include(CPack)
